crates/wasm-workers/src/snapshots/obeli_sk_wasm_workers__js_wit_builder__tests__duplicate_type_uses_same_name.snap
---
source: crates/wasm-workers/src/js_wit_builder.rs
expression: wit
---
package test:pkg;

interface ifc {
  record t0 {
    v: u32,
  }

  deduplicated: func(input: t0) -> result<t0, string>;
}

world js-activity {
  export ifc;
}
