crates/wasm-workers/src/snapshots/obeli_sk_wasm_workers__js_wit_builder__tests__enum_and_flags_generate_named_types.snap
---
source: crates/wasm-workers/src/js_wit_builder.rs
expression: wit
---
package test:pkg;

interface ifc {
  flags t0 {
    read,
    write,
  }

  enum t1 {
    a,
    b,
    c,
  }

  multi: func(perms: t0) -> result<t1, string>;
}

world js-activity {
  export ifc;
}
