crates/wasm-workers/src/snapshots/obeli_sk_wasm_workers__js_wit_builder__tests__nested_record_declares_inner_first.snap
---
source: crates/wasm-workers/src/js_wit_builder.rs
expression: wit
---
package test:pkg;

interface ifc {
  record t0 {
    z: f32,
  }

  record t1 {
    inner: t0,
    tag: string,
  }

  nested: func() -> result<t1, string>;
}

world js-activity {
  export ifc;
}
