crates/wasm-workers/src/snapshots/obeli_sk_wasm_workers__js_wit_builder__tests__record_generates_named_type_before_function.snap
---
source: crates/wasm-workers/src/js_wit_builder.rs
expression: wit
---
package test:pkg;

interface ifc {
  record t0 {
    x: u32,
    y: u32,
  }

  make-point: func(label: string) -> result<t0, string>;
}

world js-activity {
  export ifc;
}
