crates/wasm-workers/src/snapshots/obeli_sk_wasm_workers__js_wit_builder__tests__variant_with_optional_none.snap
---
source: crates/wasm-workers/src/js_wit_builder.rs
expression: wit
---
package test:pkg;

interface ifc {
  variant t0 {
    just(string),
    none,
  }

  opt-variant: func() -> result<t0, string>;
}

world js-activity {
  export ifc;
}
